Fix spacing for Overview Header layout. Add id element to primary button

--- a/src/components/layouts/MainLayout.css
+++ b/src/components/layouts/MainLayout.css
@@ -2,3 +2,9 @@
 	background-color: #f8f4f0;
 	padding: 2.4rem 1.6rem;
 }
+
+@media screen and (min-width: 768px) {
+	.main {
+		padding: 3.2rem 2.4rem;
+	}
+}
